--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <button class="l drum">l</button>
   </div>
 
+  <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
   <script src="index.js" charset="utf-8"></script>
 
   <footer>
